--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# apple file system
+# Apple file system
 **/.DS_Store
 
 # Java class files
@@ -6,3 +6,45 @@
 
 # Build directories (Gradle)
 build/
+bin/
+
+# Gradle
+.gradle/
+gradle-app.setting
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+
+# IDE - IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+# IDE - Eclipse
+.classpath
+.project
+.settings/
+bin/
+
+# IDE - VS Code (optional - uncomment if you want to ignore user-specific settings)
+# .vscode/
+
+# WPILib
+.wpilib/
+
+# Simulator runtime files
+networktables.json
+simgui*.json
+
+# JVM crash logs
+hs_err_pid*.log
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Temporary files
+*.tmp
+*.bak
+*~
